<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AboutActivity">
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_my_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="200dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/img_my_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_my_name"
                style="@style/TextContent.About"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:maxLines="2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_name"
                app:layout_constraintTop_toBottomOf="@id/img_my_photo"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextContent.About"
                android:layout_height="wrap_content"
                android:text="@string/rizky_arif_nur_choir"
                android:maxLines="2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_my_email"
                style="@style/TextContent.About"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:maxLines="2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_email"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextContent.About"
                android:layout_height="wrap_content"
                android:text="@string/rizkyarifnur_gmail_com"
                android:maxLines="2"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_github"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_my_email"
                style="@style/TextContent.About"
                android:text="@string/github"
                android:layout_height="wrap_content"
                android:maxLines="2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_github"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintStart_toEndOf="@id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextContent.About"
                android:layout_height="wrap_content"
                android:text="@string/https_github_com_rizkyarifnur"
                android:maxLines="2"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_linkedin"
                app:layout_constraintTop_toBottomOf="@id/tv_my_github"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_my_email"
                style="@style/TextContent.About"
                android:text="@string/linkedin"
                android:layout_height="wrap_content"
                android:maxLines="2"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_linkedin"
                app:layout_constraintTop_toBottomOf="@id/tv_my_github"
                app:layout_constraintStart_toEndOf="@id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextContent.About"
                android:text="@string/https_www_linkedin_com_in_rizkyarifnur"
                android:layout_height="wrap_content"
                android:maxLines="2"/>


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_my_summary"
                app:layout_constraintTop_toBottomOf="@id/tv_my_linkedin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp"
                android:text="@string/my_summary"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
